[UPDATE] (masonry) Fixed overlapping items when appending new jobs

--- a/client/css/scss/modules/_job.scss
+++ b/client/css/scss/modules/_job.scss
@@ -4,6 +4,12 @@
 	box-sizing: border-box;
 	padding: 0 0 27px 20px;
 
+	opacity: 0;
+
+	&.ready {
+		opacity: 1;
+	}
+
 	@media (max-device-width: 1024px) {
 		width: 33%;
 	}
