--- a/client/css/wall.css
+++ b/client/css/wall.css
@@ -39,7 +39,10 @@ a {
 .job-container {
   float: left;
   box-sizing: border-box;
-  padding: 0 0 27px 20px; }
+  padding: 0 0 27px 20px;
+  opacity: 0; }
+  .job-container.ready {
+    opacity: 1; }
   @media (max-device-width: 1024px) {
     .job-container {
       width: 33%; } }
